[tool.poetry]
name = "max-bot"
version = "0.1.0"
description = "Бот для мессенджера Max на maxapi"
authors = ["benomen <arvolodko@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
maxapi = "^1.2.0"
python-dotenv = "^1.0.1"
certifi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
